--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.3",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-query": "^3.39.3",
     "sass": "^1.77.8",
     "zustand": "^4.5.4"
   },
