--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.3",
     "next": "14.2.5",
+    "postcss": "^8.5.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "sass": "^1.77.8",
+    "tailwindcss": "^4.0.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
