feat: add react toast to notify the actions

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.5.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.2.1",
     "sass": "^1.77.8",
     "tailwindcss": "^4.0.0",
