--- a/package.json
+++ b/package.json
@@ -9,25 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.3",
     "next": "14.2.5",
-    "postcss": "^8.5.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.2.1",
     "sass": "^1.77.8",
-    "tailwindcss": "^4.0.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5"
   }
 }
